# ethereum-handshake

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: audit.yml  ci.yml  release.yml
src/: cli.rs  constants.rs  errors.rs  handshake.rs  interface.rs  lib.rs  main.rs  telemetry.rs
src/input/: cli.rs  enode.rs  file.rs  mod.rs
tests/: test_bng.txt  test_enodes.txt
