[package]
name = "ethereum-handshake"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Lazarević"]
description = "Ethereum peer-to-peer handshake procedure"
repository = "https://github.com/ivanbgd/ethereum-handshake"
license = "MIT"
keywords = ["eth", "ethereum", "handshake", "p2p", "peer-to-peer"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[profile.release]
strip = "symbols"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ethereum-handshake"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
eyre = "0.6"
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "recovery"] }
thiserror = "1.0.62"
tokio = { version = "1.38", features = ["macros", "net", "rt", "rt-multi-thread", "time"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
