[package]
name = "ethereum-handshake"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Lazarević"]
description = "Ethereum peer-to-peer handshake procedure"
repository = "https://github.com/ivanbgd/ethereum-handshake"
license = "MIT"
keywords = ["ethereum", "handshake", "p2p", "peer-to-peer", "rlpx"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[profile.release]
strip = "symbols"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ethereum-handshake"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
eyre = "0.6"
hex = "0.4.3"
k256 = { version = "0.13.3", default-features = false, features = ["arithmetic", "ecdh"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
secrecy = { version = "0.8.0" }
thiserror = "1.0.62"
tokio = { version = "1.38", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
